changes in copy right.

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
     <i class="logo fa-brands fa-facebook-f"></i>
     <i class="logo fa-brands fa-instagram"></i>
     <i class="logo fa-solid fa-envelope"></i>
-    <p>© Copyright 2018 TinDog</p>
+    <p>© All Copy Right are reserved TinDog 20222</p>
 
   </footer>
 
